# nicky-wordtools

./: .gitignore  README.md  pyproject.toml
examples/: demo-corpus.txt
src/: fill_interstices.py  morph_caps.py  permute.py  pyproject.toml  toolchain.py
src/.github/workflows/: python-package.yml
src/nicky-wordtools/: permute.py  toolchain.py
tests/: conftest.py  test_fill_intersticies.py  test_morph_caps.py  test_permute.py
