[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nicky-wordtools"
version = "0.1.0"
description = "Wordlist permutation & transformation utilities by NickyDoes"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Nick DeMarco", email = "your.email@example.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/ndemarco/nicky-wordtools"

[project.scripts]
permute            = "nicky_wordtools.permute:main"
fill-interstices   = "nicky_wordtools.fill_interstices:main"
morph-caps         = "nicky_wordtools.morph_caps:main"
toolchain          = "nicky_wordtools.toolchain:main"

[project.optional-dependencies]
test = ["pytest>=8.4.1"]

[tool.setuptools.packages.find]
where = ["src"]
